2011-09-24 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFError.c: Retain objects before returning on Copy operations.
	* Source/CFUUID.c:
	* Source/CFCalendar.c:
	* Headers/CoreFoundation/CFCalendar.h: Avoid warnings.

2011-09-24 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFError.m:
	* Source/CFError.c:
	* Source/NSCFError.m:
	* Source/CFRuntime.c:
	* Source/GNUmakefile: Add C only implementation of CFError.

2011-09-24 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFRuntime.c: Initialize CFData.
	* Source/CFData.c: Release instead of deallocate ivar.

2011-09-24 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/NSCFType.h:
	* Source/NSCFType.m: Delete NSCFType.h and move interface definition to
	NSCFType.m.
	* Source/NSCFData.m: Added Objective-C interface to CFData.
	* Source/Data.c: Check deallocator before setting it.

2011-09-23 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFString.c: Do not require the use of libicuio.
	* Source/GNUmakefile: Update library dependency.

2011-09-23 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CFData.h:
	* Source/CFData.m:
	* Source/CFData.c:
	* Source/GNUmakefile: Replace CFData.m with CFData.c.

2011-09-22 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFRuntime.m:
	* Source/CFRuntime.c: Increment and decrement reference count ourselves
	instead of relying on Foundation functions.
	* Source/GNUmakefile: Replace CFRuntime.m with CFRuntime.c.
	* Source/atomic_ops.h: Atomic increment and decrement operations.

2011-09-21 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFRuntime.m: Set memory to 0 when creating new objects, and do
	not accept anything but an actual CFTypeID in CFCopyTypeIDDescription().
	* Source/CFString.c: Reverted previous changes, bug was actually in
	CFRuntime.

2011-09-21 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFRuntime.m: Create instances ourselves instead relying on
	gnustep-base.
	* Source/GNUmakefile:
	* Source/CFBase.c: